--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ body {
 .socmed-container {
   display: flex;
   flex-direction: column;
-  justify-content:left;
+  justify-content: left;
   align-items: left;
 }
 
@@ -499,6 +499,14 @@ body {
 .projects-list-item {
   border: 1px solid var(--cornflower);
   background: var(--white);
+}
+
+.projects-list-item:hover {
+  border-radius: 0px 0px 4px 4px;
+  background: var(--white);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .project-details {
